# Distributed-voting-system

./: .gitignore  .project  AUTHORS  CMakeLists.txt  ChangeLog  README.md  architecture.plantuml  configure.ac  run.sh
.github/workflows/: travis.yml
cmake/: Conan.cmake  googletest-download.cmake
docs/: CMakeLists.txt  component_diagram.plantuml  voting_booth_activity_chart.plantuml
external_libs/boost_asio_1_16_0/boost/: asio.hpp
external_libs/boost_asio_1_16_0/doc/html/: boost_asio.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/: examples.html  history.html  index.html  net_ts.html  overview.html  reference.html  tutorial.html  using.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/examples/: cpp03_examples.html  cpp11_examples.html  cpp14_examples.html  cpp17_examples.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/overview/: core.html  cpp2011.html  implementation.html  networking.html  posix.html  rationale.html  serial_ports.html  signals.html  ssl.html  timers.html  windows.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/overview/core/: allocation.html  async.html  basics.html  buffers.html  concurrency_hint.html  coroutine.html  coroutines_ts.html  handler_tracking.html  line_based.html  reactor.html  spawn.html  strands.html  streams.html  threads.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/overview/cpp2011/: array.html  atomic.html  chrono.html  futures.html  move_handlers.html  move_objects.html  shared_ptr.html  variadic.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/overview/networking/: bsd_sockets.html  iostreams.html  other_protocols.html  protocols.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/overview/posix/: fork.html  local.html  stream_descriptor.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/overview/windows/: object_handle.html  random_access_handle.html  stream_handle.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/: AcceptHandler.html  AcceptableProtocol.html  AsyncRandomAccessReadDevice.html  AsyncRandomAccessWriteDevice.html  AsyncReadStream.html  AsyncWriteStream.html  BufferedHandshakeHandler.html  CompletionCondition.html  CompletionHandler.html  ConnectCondition.html  ConnectHandler.html  ConstBufferSequence.html  DynamicBuffer.html  DynamicBuffer_v1.html  DynamicBuffer_v2.html  Endpoint.html  EndpointSequence.html  ExecutionContext.html  Executor1.html  GettableSerialPortOption.html  GettableSocketOption.html  Handler.html  HandshakeHandler.html  InternetProtocol.html  IoControlCommand.html  IoObjectService.html  IteratorConnectHandler.html  LegacyCompletionHandler.html  MoveAcceptHandler.html  MutableBufferSequence.html  ProtoAllocator.html  Protocol.html  RangeConnectHandler.html  ReadHandler.html  ResolveHandler.html  Service.html  SettableSerialPortOption.html  SettableSocketOption.html  ShutdownHandler.html  SignalHandler.html  (+268 more)
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/asio_handler_invoke/: overload1.html  overload2.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/associated_allocator/: get.html  type.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/associated_executor/: get.html  type.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/async_completion/: async_completion.html  completion_handler.html  completion_handler_type.html  result.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/async_connect/: overload1.html  overload2.html  overload3.html  overload4.html  overload5.html  overload6.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/async_read/: overload1.html  overload2.html  overload3.html  overload4.html  overload5.html  overload6.html  overload7.html  overload8.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/async_read_at/: overload1.html  overload2.html  overload3.html  overload4.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/async_read_until/: overload1.html  overload10.html  overload11.html  overload12.html  overload2.html  overload3.html  overload4.html  overload5.html  overload6.html  overload7.html  overload8.html  overload9.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/async_result/: async_result.html  completion_handler_type.html  get.html  initiate.html  return_type.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/async_result_lt__std__packaged_task_lt__Result_lp_Args_ellipsis__rp__gt__comma__Signature__gt_/: async_result.html  completion_handler_type.html  get.html  return_type.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/async_write/: overload1.html  overload2.html  overload3.html  overload4.html  overload5.html  overload6.html  overload7.html  overload8.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/async_write_at/: overload1.html  overload2.html  overload3.html  overload4.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/awaitable/: _awaitable.html  awaitable.html  executor_type.html  valid.html  value_type.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/bad_executor/: bad_executor.html  what.html
external_libs/boost_asio_1_16_0/doc/html/boost_asio/reference/basic_datagram_socket/: _basic_datagram_socket.html  assign.html  async_connect.html  async_receive.html  async_receive_from.html  (+58 more)
external_libs/boost_asio_1_16_0/doc/html/boost_asio/tutorial/: tutdaytime1.html  tutdaytime2.html  tutdaytime3.html  tutdaytime4.html  tutdaytime5.html  tutdaytime6.html  tutdaytime7.html  tuttimer1.html  tuttimer2.html  tuttimer3.html  tuttimer4.html  tuttimer5.html
ifc/: IVotesGatherer.hpp  IVotingBooth.hpp
inc/: Config.hpp  Database.hpp  VotesGatherer.hpp  VotingBooth.hpp
src/: CMakeLists.txt  Database.cpp  Makefile.am  VotesGatherer.cpp  VotingBooth.cpp  boost_example.cpp  main.cpp  synchrounous_tcp_daytime_client.cpp  synchrounous_tcp_daytime_server.cpp
tests/: CMakeLists.txt  DatabaseUT.cpp  VotesGathererUT.cpp
(+2629 files in other folders)
